# eval-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
js/: package.json
js/lib/: stats.mjs
js/test/: stats.test.mjs
lib/: stats.mjs
python/: README.md  pyproject.toml
python/src/eval_kit/: __init__.py  stats.py
python/tests/: test_stats.py
tests/cross-validation/: bridge.mjs  test_cross_validation.py
