[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-kit"
version = "0.0.1"
description = "Statistical confidence for LLM evaluation -- Python binding"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Anthony Ledesma" }]
keywords = ["llm", "evaluation", "statistics", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/TracineHQ/eval-kit"
Repository = "https://github.com/TracineHQ/eval-kit"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

